# expectedvalue_tools

./: .cursorrules  README.md  pyproject.toml
example_data/oo/live/: Bearish-Credit-1H-ORB-130-SL-85-SL-ADJ-500-.csv  METF-CALL-Spreads-13-00-14-30-14-45-1-9P-110-SL-.csv  METF-PUT-Spreads-13-00-14-30-2-5P-110-SL-.csv  Monday-2-4-DC-live.csv  OO-RIC.csv  Tuesday-1-3-Double-Calendar-Delta-based-rail-.csv  portfolio-track.csv  portfolio-track2.csv
reports_output/: compare_Live_vs_Backtest_Comparison_20260203_220728.html  track_Portfolio_Track_Analysis_20260203_221338.html  track_Portfolio_Track_Analysis_20260203_222548.html  track_Portfolio_Track_Analysis_20260203_222722.html  track_Portfolio_Track_Analysis_20260203_223526.html  track_Portfolio_Track_Analysis_20260203_223831.html  track_Portfolio_Track_Analysis_20260203_224414.html  track_Portfolio_Track_Analysis_20260203_224913.html  track_Portfolio_Track_Analysis_20260203_225442.html
src/expectedvalue_tools/: __init__.py
src/expectedvalue_tools/cli/: __init__.py  main.py
src/expectedvalue_tools/enrichers/: __init__.py  base.py  trade_enricher.py
src/expectedvalue_tools/normalizers/: __init__.py  base.py  trade_data.py
src/expectedvalue_tools/output/: __init__.py  formatters.py  html_reporter.py  visualizers.py
src/expectedvalue_tools/parsers/: __init__.py  base.py  option_omega.py
src/expectedvalue_tools/tests/: __init__.py  base.py  drawdown_analysis.py  live_backtest_comparison.py  portfolio_correlation.py  portfolio_stress.py  power_analysis.py  tail_overfitting.py  track_test.py
(+22 files in other folders)
