[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expectedvalue-tools"
version = "0.1.0"
description = "Statistical analysis tools for trading strategies"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Expected Value Tools", email = "info@expectedvalue.trade"}
]
keywords = ["trading", "statistics", "backtesting", "power-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]
viz = [
    "matplotlib>=3.5.0",
]

[project.scripts]
evtools = "expectedvalue_tools.cli.main:main"

[project.urls]
Homepage = "https://expectedvalue.trade"
Documentation = "https://expectedvalue.trade/docs"
Repository = "https://github.com/expectedvalue/tools"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]
